--- a/gs-rest-service/initial/build.gradle
+++ b/gs-rest-service/initial/build.gradle
@@ -1,21 +1,7 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
-    }
-}
-
 apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
 
-jar {
-    baseName = 'gs-rest-service'
-    version =  '0.1.0'
-}
+mainClassName = 'hello.HelloWorld'
 
 repositories {
     mavenCentral()
@@ -25,7 +11,11 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile "joda-time:joda-time:2.2"
+    testCompile "junit:junit:4.12"
 }
 
+jar {
+    baseName = 'gs-gradle'
+    version =  '0.1.0'
+}
