--- a/gs-rest-service/initial/gradle/wrapper/gradle-wrapper.properties
+++ b/gs-rest-service/initial/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Aug 29 13:08:14 CDT 2016
+#Thu Mar 02 13:26:38 EET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
