first build some upgrade

--- a/gs-rest-service/initial/build.gradle
+++ b/gs-rest-service/initial/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = 'hello.HelloWorld'
+mainClassName = 'hello.Registration'
 
 repositories {
     mavenCentral()
