--- a/gs-rest-service/initial/pom.xml
+++ b/gs-rest-service/initial/pom.xml
@@ -28,7 +28,13 @@
             <artifactId>json-path</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.3.RELEASE</version>
+        </dependency>
     </dependencies>
+
 
     <properties>
         <java.version>1.8</java.version>
